--- a/GoldenPairs-InitialVersion.tex
+++ b/GoldenPairs-InitialVersion.tex
@@ -1,4 +1,4 @@
-%% Building an NLI corpus from TAC sentences/Revised prompts after chatGPT/GPT4 checks and discussion
+%% Building an NLI corpus from TAC sentences/Need to revise prompts after chatGPT/GPT4 checks and discussion
 
 1. We use a number of interesting categories related to probability theory.
 E. There exists a number of interesting categories related to probability theory.
