--- a/GoldenPairs-InitialVersion.tex
+++ b/GoldenPairs-InitialVersion.tex
@@ -1,91 +1,91 @@
 %% Building an NLI corpus from TAC sentences/Need to revise prompts after chatGPT/GPT4 checks and discussion
 
 1. We use a number of interesting categories related to probability theory.
-E. There exists a number of interesting categories related to probability theory.
+E: There exists a number of interesting categories related to probability theory.
 
 1. We use a number of interesting categories related to probability theory.
-C. There are no interesting categories related to probability theory.
+C: There are no interesting categories related to probability theory.
 
 1. We use a number of interesting categories related to probability theory.
-N. There are no interesting categories related to topology.
+N: There are no interesting categories related to topology.
 
 2. A notion of central importance in categorical topology is that of topological functor.
-E. Topological functor is a notion of categorical topology.
+E: Topological functor is a notion of categorical topology.
 
 2. A notion of central importance in categorical topology is that of topological functor.
-C. There are no notions of importance in categorical topology.
+C: There are no notions of importance in categorical topology.
 
 2. A notion of central importance in categorical topology is that of topological functor.
-N. There are many  notions of central importance in categorical topology.
+N: There are many  notions of central importance in categorical topology.
 
 3. In the nilpotent case, this nerve is known to be a Kan complex.
-E. There are nerves that are Kan complexes.
+E: There are nerves that are Kan complexes.
 
 3. In the nilpotent case, this nerve is known to be a Kan complex.
-C. In the nilpotent case, this nerve is not known to be a Kan complex.
+C: In the nilpotent case, this nerve is not known to be a Kan complex.
 
 3. In the nilpotent case, this nerve is known to be a Kan complex.
-N. This nerve is not known to be a Kan complex.
+N: This nerve is not known to be a Kan complex.
 
 4. We worked through numerous examples to demonstrate the power of these notions.
-E. We worked through two examples to demonstrate the power of these notions.
+E: We worked through two examples to demonstrate the power of these notions.
 
 4. We worked through numerous examples to demonstrate the power of these notions.
-C. We did not work through numerous examples to demonstrate the power of these notions.
+C: We did not work through numerous examples to demonstrate the power of these notions.
 
 4. We worked through numerous examples to demonstrate the power of these notions.
-N. We worked through more than 20 examples to demonstrate the power of these notions.
+N: We worked through more than 20 examples to demonstrate the power of these notions.
 
 5. If the category is additive, we define a sheaf of categories of analytic functions.
-E. If the category is additive, we define a sheaf of categories of functions.
+E: If the category is additive, we define a sheaf of categories of functions.
 
 5. If the category is additive, we define a sheaf of categories of analytic functions.
-C. If the category is additive, we do not define a sheaf of categories of analytic functions.
+C: If the category is additive, we do not define a sheaf of categories of analytic functions.
 
 5. If the category is additive, we define a sheaf of categories of analytic functions.
 N: If the category is non-additive, we define a sheaf of categories of analytic functions.
 
 6. We use these relations to define analytic versions of Arakelov compactifications of affine arithmetic varieties.
-E. We can define analytic versions of Arakelov compactifications of affine arithmetic varieties.
+E: We can define analytic versions of Arakelov compactifications of affine arithmetic varieties.
 
 6. We use these relations to define analytic versions of Arakelov compactifications of affine arithmetic varieties.
-C. These relations cannot be used to define analytic versions of Arakelov compactifications of affine arithmetic varieties.
+C: These relations cannot be used to define analytic versions of Arakelov compactifications of affine arithmetic varieties.
 
 6. We use these relations to define analytic versions of Arakelov compactifications of affine arithmetic varieties.
 N: We use these relations to define analytic versions of  compactifications of non-varieties.
 
 7. These functors are used in the paper only to prove Corollary~8.3.
-E. These functors are used in the paper  to prove Corollary~8.3.
+E: These functors are used in the paper  to prove Corollary~8.3.
 
 7. These functors are used in the paper only to prove Corollary~8.3.
-C. These functors are not used in the paper  to prove Corollary~8.3.
+C: These functors are not used in the paper  to prove Corollary~8.3.
 
 7. These functors are used in the paper only to prove Corollary~8.3.
-N. These natural transformations are used in the paper  to prove Corollary~8.5.
+N: These natural transformations are used in the paper  to prove Corollary~8.5.
 
 8. A proof of this corollary is given without details.
-E. There exists a proof of this corollary.
+E: There exists a proof of this corollary.
 
 8. A proof of this corollary is given without details.
-C. There is no proof of this corollary without details.
+C: There is no proof of this corollary without details.
 
 8. A proof of this corollary is given without details.
-N. A proof of this corollary is given without a computer program.
+N: A proof of this corollary is given without a computer program.
 
 9. Here ``balanced'' can be omitted if the category is additive.
-E. For additive categories ``balanced" can be omitted here.
+E: For additive categories ``balanced" can be omitted here.
 
 9. Here ``balanced'' can be omitted if the category is additive.
-C. Here ``balanced'' cannot be omitted if the category is additive.
+C: Here ``balanced'' cannot be omitted if the category is additive.
 
 9. Here ``balanced'' can be omitted if the category is additive.
-N. Here ``balanced'' can be omitted if the category is multiplicative.
+N: Here ``balanced'' can be omitted if the category is multiplicative.
 
 10. We introduce the notion of mutation pairs in pseudo-triangulated categories.
-E. We introduce the notion of mutation pairs.
+E: We introduce the notion of mutation pairs.
 
 10. We introduce the notion of mutation pairs in pseudo-triangulated categories.
-C. We cannot introduce the notion of mutation pairs in pseudo-triangulated categories.
+C: We cannot introduce the notion of mutation pairs in pseudo-triangulated categories.
 
 10. We introduce the notion of mutation pairs in pseudo-triangulated categories.
 N: We introduce the notation of mutation pairs in monoidal categories.
@@ -307,13 +307,13 @@ C: We build on synthetic theories of many others in order to provide a synthetic
 34. We take some first steps in providing a synthetic theory of distributions.
 N: We do not think it will be easy to take the next steps.
 
-35. We introduce various notions of partial topos, i.e. `topos without terminal object'.
+35. We introduce various notions of partial topos, i.E: `topos without terminal object'.
 E:  A partial topos is a topos without a terminal object.
 
-35. We introduce various notions of partial topos, i.e. `topos without terminal object'.
+35. We introduce various notions of partial topos, i.E: `topos without terminal object'.
 C:  There is only one notion of partial topos.
 
-35. We introduce various notions of partial topos, i.e. `topos without terminal object'.
+35. We introduce various notions of partial topos, i.E: `topos without terminal object'.
 N:  We also introduce various notions of topos with a terminal object.
 
 36. Examples for the weaker notions are local homeomorphisms and discrete fibrations.
@@ -665,7 +665,7 @@ E: Some approach to product measures results from coproduct preservation.
 C: Product measures are not related to coproduct preservation.
 
 74. Now coproduct preservation yields an approach to product measures.
-N: Now the preservation of product measures yields coproduct preservation. 
+N: Now the preservation of product measures yields coproduct preservatioN: 
 
 75. Then we present three applications of groupoidification.
 E: We present at least two applications of groupoidification.
@@ -805,10 +805,10 @@ N: In this paper we will give a number=theoretic proof of this result.
 90. We clarify details of that work.
 E: We provide details of that work.
 
-90. We clarify details of that work
+90. We clarify details of that work.
 C: That work cannot be clarified.
 
-90. We clarify details of that work
+90. We clarify details of that work.
 N: We give details of a special case of that work.
 
 91. Our main conceptual tool is a monad on the category of grouped toposes.
